# external-deps-build

./: .gitignore  CONTRIBUTING  LICENSE  README.md  download_and_patch_sdist.py  find_nonpure_packages.py  pypi_top100_nonpure.txt  pypi_top100_pure.txt  pypi_top150_pure.txt  requirements.txt
.github/workflows/: build_all.yml  ubuntu_no_external.yml  update_readme.yml
external_metadata/: bcrypt.toml  cffi.toml  charset-normalizer.toml  cryptography.toml  frozenlist.toml  greenlet.toml  grpcio-tools.toml  grpcio.toml  httptools.toml  kiwisolver.toml  lxml.toml  matplotlib.toml  numpy.toml  pandas.toml  pillow.toml  psycopg2-binary.toml  pyarrow.toml  pycryptodomex.toml  pydantic-core.toml  pynacl.toml  pyyaml.toml  rpds-py.toml  scipy.toml
patches/: README.md  grpcio.py  matplotlib.py
py-show/: pyproject.toml
py-show/pyshow/: __init__.py  __main__.py
results/: jobs_first100.json  jobs_second48.json
scripts/: summarize_results.py
top_packages/: pypi_top150_nonpure.txt
